--- a/examples/example.css
+++ b/examples/example.css
@@ -50,6 +50,19 @@ select {
   font-size: 24px;
 }
 
+dt {
+  padding: 5px 0 5px 0;
+}
+
+dd {
+  margin-left: 0;
+  padding: 5px 0 5px 0;
+}
+
+dd > input[type=range] {
+  width: 320px;
+}
+
 .label {
   display: inline-block;
   width: 140px;
