--- a/examples/example.css
+++ b/examples/example.css
@@ -1,17 +1,78 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title></title>
-  </head>
-  <body>
-    body { font-family: sans-serif; width: 796px; margin: 96px auto; } h1 {
-    margin: 40px 0; } h2 { margin: 30px 0; } div { margin: 5px 0; } a { color:
-    #2196F3; font-weight: bold; text-decoration: none; } ul { line-height:
-    30px; margin: 0; padding: 0 0 0 25px; } p { line-height: 22px; font-size:
-    16px; } p &gt; code { color: #009688; font-weight: 600; font-family:
-    monospace; } button { width: 140px; height: 40px; font-size: 24px; } select
-    { width: 140px; font-size: 24px; } dt { padding: 5px 0 5px 0; } dd {
-    margin-left: 0; padding: 5px 0 5px 0; } dd &gt; input[type=range] { width:
-    320px; } .label { display: inline-block; width: 140px; height: 40px; }
-  </body>
-</html>
+body {
+    font-family: sans-serif;
+
+    width: 796px;
+    margin: 96px auto;
+}
+
+h1 {
+    margin: 40px 0;
+}
+
+h2 {
+    margin: 30px 0;
+}
+
+div {
+    margin: 5px 0;
+}
+
+a {
+    font-weight: bold;
+
+    text-decoration: none;
+
+    color: #2196f3;
+}
+
+ul {
+    line-height: 30px;
+
+    margin: 0;
+    padding: 0 0 0 25px;
+}
+
+p {
+    font-size: 16px;
+    line-height: 22px;
+}
+
+p>code {
+    font-family: monospace;
+    font-weight: 600;
+
+    color: #009688;
+}
+
+button {
+    font-size: 24px;
+
+    width: 140px;
+    height: 40px;
+}
+
+select {
+    font-size: 24px;
+
+    width: 140px;
+}
+
+dt {
+    padding: 5px 0 5px 0;
+}
+
+dd {
+    margin-left: 0;
+    padding: 5px 0 5px 0;
+}
+
+dd>input[type=range] {
+    width: 320px;
+}
+
+.label {
+    display: inline-block;
+
+    width: 140px;
+    height: 40px;
+}
